--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="accent">#C0CA33</color>
     <color name="primary_light">#B0BEC5</color>
 
+    <color name="white">#F5F5F5</color>
     <color name="white_alpha">#8FFF</color>
     <color name="black_alpha">#2000</color>
 
