--- a/sample/src/main/res/layout/fragment_styling_sample.xml
+++ b/sample/src/main/res/layout/fragment_styling_sample.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:paddingLeft="10dp"
-             android:paddingRight="10dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -22,13 +22,13 @@
 
                 <TextView
                     style="@style/CardTitle"
-                    android:text="@string/title_styling"/>
+                    android:text="@string/title_styling" />
 
                 <FrameLayout style="@style/Section.Container">
 
                     <TextView
                         style="@style/Section.Text"
-                        android:text="@string/section_style_colors"/>
+                        android:text="@string/section_style_colors" />
                 </FrameLayout>
 
                 <com.greenfrvr.hashtagview.HashtagView
@@ -41,13 +41,13 @@
                     app:tagPaddingLeft="@dimen/padding_vertical"
                     app:tagPaddingRight="@dimen/padding_vertical"
                     app:tagPaddingTop="@dimen/padding_vertical"
-                    app:tagTextColor="#00695C"/>
+                    app:tagTextColor="@color/text" />
 
                 <FrameLayout style="@style/Section.Container">
 
                     <TextView
                         style="@style/Section.Text"
-                        android:text="@string/section_style_spans"/>
+                        android:text="@string/section_style_spans" />
                 </FrameLayout>
 
                 <com.greenfrvr.hashtagview.HashtagView
@@ -59,7 +59,7 @@
                     app:tagPaddingLeft="@dimen/padding_horizontal"
                     app:tagPaddingRight="@dimen/padding_horizontal"
                     app:tagPaddingTop="@dimen/padding_vertical"
-                    app:tagTextColor="#E5E5E5"/>
+                    app:tagTextColor="#E5E5E5" />
 
                 <com.greenfrvr.hashtagview.HashtagView
                     android:id="@+id/hashtags3"
@@ -70,13 +70,13 @@
                     app:tagPaddingLeft="@dimen/padding_horizontal"
                     app:tagPaddingRight="@dimen/padding_horizontal"
                     app:tagPaddingTop="@dimen/padding_vertical"
-                    app:tagTextColor="#E5E5E5"/>
+                    app:tagTextColor="#E5E5E5" />
 
                 <FrameLayout style="@style/Section.Container">
 
                     <TextView
                         style="@style/Section.Text"
-                        android:text="@string/section_style_drawables"/>
+                        android:text="@string/section_style_drawables" />
                 </FrameLayout>
 
                 <com.greenfrvr.hashtagview.HashtagView
@@ -91,13 +91,13 @@
                     app:tagPaddingLeft="@dimen/padding_horizontal"
                     app:tagPaddingRight="@dimen/padding_horizontal"
                     app:tagPaddingTop="@dimen/padding_vertical"
-                    app:tagTextColor="#E5E5E5"/>
+                    app:tagTextColor="#E5E5E5" />
 
                 <FrameLayout style="@style/Section.Container">
 
                     <TextView
                         style="@style/Section.Text"
-                        android:text="@string/section_style_selection_drawables"/>
+                        android:text="@string/section_style_selection_drawables" />
                 </FrameLayout>
 
                 <com.greenfrvr.hashtagview.HashtagView
@@ -115,7 +115,7 @@
                     app:tagPaddingRight="@dimen/padding_horizontal"
                     app:tagPaddingTop="@dimen/padding_vertical"
                     app:tagSelectedDrawableRight="@drawable/ic_done_white_18dp"
-                    app:tagTextColor="#E5E5E5"/>
+                    app:tagTextColor="#E5E5E5" />
 
                 <com.greenfrvr.hashtagview.HashtagView
                     android:id="@+id/hashtags6"
@@ -129,9 +129,9 @@
                     app:tagPaddingLeft="@dimen/padding_horizontal"
                     app:tagPaddingRight="@dimen/padding_horizontal"
                     app:tagPaddingTop="@dimen/padding_vertical"
-                    app:tagTextColor="#E5E5E5"/>
+                    app:tagTextColor="#E5E5E5" />
 
-                <include layout="@layout/layout_buttons"/>
+                <include layout="@layout/layout_buttons" />
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
